review interruption logic with notification for multi instances refactor the isSecure logic of the border, first test flow then angle, then voltage